<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leap_motion_ros2_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zerotohero7886@gmail.com">mithril</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>leap_motion_interface</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>